@@ -1,7 +1,8 @@
 Revision history for Perl extension AnyEvent.
 
 	- add some recommends to the META.yml.
-	- added a a regex read type to AnyEvent::Handle.
+	- added a regex read type to AnyEvent::Handle.
+	- added a json read/write type to AnyEvent::Handle.
         - always croak in on_error in AnyEvent::Handle.
         - document how to subclass AnyEvent::Handle.
         - implement AnyEvent::Util::fork_call.
@@ -9,6 +10,8 @@ Revision history for Perl extension AnyEvent.
           select masks cause errors in the pure perl backend (this
           workaround cannot be implemented for the other event loops,
           but EV also works around this).
+        - clarify and fix the Handle documentation w.r.t $self vs. $handle
+          vs. callback arguments.
 
 4.05 Mon May 26 19:44:06 CEST 2008
         - some platforms ignore the rfc and prepend an extra sa_len member to
